test/types/records/lydia/recordOffset-badField.good
recordOffset-badField.chpl:11: error: field foo not found in Test
